Log errors to file

--- a/sparkerl_server.config
+++ b/sparkerl_server.config
@@ -4,5 +4,6 @@
  {sparkerl, [
     {protocol_handler, sparkerl_server_protocol_handler}]},
  {lager, [
-    {handlers, [{lager_console_backend, info}]}]}
+    {handlers, [{lager_console_backend, info},
+                {lager_file_backend, [{file, "log/error.log"}, {level, error}]}]}]}
 ].
